hydroflow/tests/snapshots/surface_unique__unique@graphvis_dot.snap
---
source: hydroflow/tests/surface_unique.rs
expression: df.serde_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_stream(items_recv)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) unique()", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n3v1 [label="(n3v1) for_each(| v | print! (\"{:?}, \", v))", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n1v1 -> n2v1
        n2v1 -> n3v1
    }
}

