hydroflow/tests/snapshots/surface_unique__unique@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_unique.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_stream(items_recv)</tt>"/]:::pullClass
    2v1[/"(2v1) <tt>unique()</tt>"\]:::pushClass
    3v1[/"(3v1) <tt>for_each(| v | print! (&quot;{:?}, &quot;, v))</tt>"\]:::pushClass
    1v1--->2v1
    2v1--->3v1
end

