hydroflow/tests/snapshots/surface_unique__unique_static_pull@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_unique.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff0,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <code>repeat_iter(0..10)</code>"/]:::pullClass
    2v1[\"(2v1) <code>repeat_iter(5..15)</code>"/]:::pullClass
    3v1[\"(3v1) <code>union()</code>"/]:::pullClass
    4v1[\"(4v1) <code>unique::&lt;'static&gt;()</code>"/]:::pullClass
    5v1[\"(5v1) <code>repeat_iter(0..0)</code>"/]:::pullClass
    6v1[\"(6v1) <code>union()</code>"/]:::pullClass
    7v1[/"(7v1) <code>for_each(|v| out_send.send(v).unwrap())</code>"\]:::pushClass
    1v1--->3v1
    2v1--->3v1
    3v1--->4v1
    4v1--->6v1
    5v1--->6v1
    6v1--->7v1
    subgraph sg_1v1_var_m1 ["var <tt>m1</tt>"]
        3v1
        4v1
    end
    subgraph sg_1v1_var_m2 ["var <tt>m2</tt>"]
        6v1
        7v1
    end
end

