hydroflow/tests/snapshots/surface_unique__unique_static_push@graphvis_dot.snap
---
source: hydroflow/tests/surface_unique.rs
expression: df.serde_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) repeat_iter(0..10)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) repeat_iter(5..15)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n3v1 [label="(n3v1) merge()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n4v1 [label="(n4v1) tee()", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n5v1 [label="(n5v1) unique::<'static>()", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n6v1 [label="(n6v1) for_each(|v| out_send.send(v).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n7v1 [label="(n7v1) for_each(std::mem::drop)", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n1v1 -> n3v1
        n2v1 -> n3v1
        n3v1 -> n4v1
        n4v1 -> n5v1
        n4v1 -> n7v1
        n5v1 -> n6v1
    }
}

